# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  .travis.yml  Brewfile  Brewfile.local.example  CLAUDE.md  contributing.md  docker-compose.yml  links.conf  readme.md  test.sh
.claude/: settings.json
.github/: renovate.json
asdf/: Brewfile  install.sh  path.zsh
aws/: Brewfile  aliases.zsh  completion.zsh  defaults.zsh  functions.zsh
azure/: completion.zsh  install.sh
bat/: Brewfile  aliases.zsh  batman.zsh  config  install.sh  symlinks.conf
btop/: Brewfile  install.sh  symlinks.conf
chef/: _berks  _chef  _knife  functions.zsh  path.zsh
ci/: travis.zsh
claude/: Brewfile  README.md  aliases.zsh  completion.zsh  completions.zsh  default-npm-packages  env.zsh  functions.zsh  install.sh  ssh-wrapper  trust-worktree
colors/: Brewfile  grc.zsh  grep.zsh  ls.zsh  mono.zsh
completions/: _terraform  _vagrant
cycling/: Brewfile
docker/: Brewfile  _docker-machine  aliases.zsh
eaze/: chef.zsh  csr.zsh  path.zsh
functions/: _clone  _s  _tmp  c  clone  s  tmp
gcloud/: Brewfile  completion.zsh  completions.zsh  path.zsh
git/: Brewfile  aliases.zsh  clone.zsh  completion.zsh  completions.zsh  config  config.zsh  contributors.zsh  delta-flavor.conf  gitconfig.local.symlink  gitconfig.symlink  (+5 more)
tmux/search/fzf-links/: README.md  format.py  git_context.py  git_context_test.py  linear.py  linear_test.py  options.py  osc8.py  osc8_test.py  pyproject.toml  python  references.py  references_test.py  results.py  schemes.py  user_schemes.py
(+280 files in other folders)
