[project]
name = "fzflinks"
version = "0"
requires-python = ">=3.14"
dependencies = [
    "giturlparse>=0.12.0",
    "pygit2>=1.18.2",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
python_files = ["*_test.py"]
